Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.921 devel

****  Fix GCC 8.0 issues, bug1273.


* Verilator 3.920 2018-02-01

**    Moving forward, use the git "stable" branch to track the latest release,
      and git "v#.###" tags for specific releases.

***   Support 'assume' similar to 'assert', bug1269. [Dan Gisselquist]

****  Fix tracing example file output, bug1268. [Enzo Chi]

****  Fix gate optimization out of memory, add --gate-stmts, bug1260. [Alex Solomatnikov]

****  Fix compile error on public real parameters by suppressing, bug1261. [Alex Solomatnikov]

****  Fix input-only tristate comparisons, bug1267. [Alexis G]

****  Fix missing edge type in xml output, msg2480. [Alexis G]

****  Fix compile error with --public and interface bind, bug1264. [Alexis G]

****  Remove c++filt, bug1265. [Stefan Wallentowitz]


* Verilator 3.918 2018-01-02

***   Workaround GCC/clang bug with huge compile times, bug1248.

***   Support DPI open arrays, bug909, bug1245. [David Pierce, Victor Besyakov]

***   Add INFINITELOOP warning, bug1254. [Alex Solomatnikov]

****  Support > 64 bit decimal $display.

****  Support DPI time and svLogicVal. [Victor Besyakov]
      Note older version incorrectly assumed svBitVal even for logicals.

****  Support string len() method. [Victor Besyakov]

****  Add error if always_comb has sensitivity list. [Arjen Roodselaar]

****  Fix SystemC 2.3.2 compile error, bug1251. [Tymoteusz Blazejczyk]

****  Fix modport outputs being treated as inputs, bug1246. [Jeff Bush]

****  Fix false ALWCOMBORDER on interface references, bug1247. [Josh Redford]

****  Fix constant propagation across DPI imports of inout strings. [Victor Besyakov]

****  Fix resolving inline nested interface names, bug1250. [Arjen Roodselaar]


* Verilator 3.916 2017-11-25

***   Support self-recursive modules, bug659. [Sean Moore, et al]

***   Support $error/$warning in elaboration time blocks.
