@@ -6,6 +6,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix GCC 8.0 issues, bug1273.
 
+****  Fix pullup/pulldowns on bit selects, bug1274. [Rob Stoddard]
+
 
 * Verilator 3.920 2018-02-01
 
